manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test1
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: test1
  template:
    metadata:
      labels:
        app: test1
    spec:
      containers:
      - image: nurlan1992/test1:v2
        name: test1
        ports:
        - containerPort: 5000
