manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test1
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: test1
