manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test1
spec:
  rules:
  - host: nurlan.kz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test1
            port:
              number: 5000
